# pysmsboxnet

./: .coderabbit.yaml  .gitignore  .mergify.yml  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  _config.yml  codecov.yml  example.py  index.html  pyproject.toml  requirements.txt  requirements_doc.txt  requirements_lint.txt  requirements_test.txt  setup.cfg  setup.py
.github/: dependabot.yml  mergify.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: actions.yml  auto-approve-renovate.yml  auto-merge-pre-commit-ci.yml  automerge.yml  codeql.yml  dependency-review.yml  gitleaks.yml  release.yml  release_doc.yml
0.0.1/: develop.html  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pysmsboxnet.html  search.html  searchindex.js
0.0.1/_sources/: example.rst.txt  install.rst.txt
2022.12.0/: develop.html  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pysmsboxnet.html  search.html
2022.12.0/_sources/: develop.rst.txt
2023.2.0/: .buildinfo  develop.html  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pysmsboxnet.html  search.html
2023.2.1/: develop.html  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pysmsboxnet.html  search.html  searchindex.js
2023.5.0/: .buildinfo  develop.html  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pysmsboxnet.html  search.html  searchindex.js
2023.5.0/_sources/: example.rst.txt
2024.6.0/: index.html  objects.inv  search.html
2024.6.1/: example.html  genindex.html  install.html  objects.inv  py-modindex.html
2024.6.1/_sources/: index.rst.txt
dev/: .buildinfo  develop.html  example.html  genindex.html  index.html  install.html  objects.inv  py-modindex.html  pysmsboxnet.html  search.html  searchindex.js
dev/_sources/: example.rst.txt  pysmsboxnet.rst.txt
dev/_static/: documentation_options.js
docs/: conf.py  develop.rst  index.rst  install.rst  pysmsboxnet.rst
pysmsboxnet/: __init__.py  api.py  exceptions.py
script/: copy_example.py  run-in-env.sh
scripts/: copy_example.py
src/pysmsboxnet/: __init__.py  api.py  exceptions.py
stable/: index.html
tests/: __init__.py  const.py  test_api.py
