[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pysmsboxnet"
dynamic=["version"]
authors = [
    {name = "Patrick ZAJDA", email = "patrick@zajda.fr"}
]
description = "Client to send SMS using www.smsbox.net API"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["smsbox", "api", "sms"]
license = {text = "MIT license"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Communications",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0,<4.0",
]

[project.optional-dependencies]
doc = [
    "Sphinx==7.2.6",
    "furo==2023.9.10",
]
lint = [
    "black==23.12.1",
    "codespell==v2.2.6",
    "flake8==7.0.0",
    "isort==5.13.2",
    "mypy==1.8.0",
    "pre-commit==3.6.0",
]
test = [
    "aresponses==3.0.0",
    "coverage==7.4.0",
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
]

[project.urls]
"Source code" = "https://github.com/Nardol/pysmsboxnet"
"Bug tracker" = "https://github.com/Nardol/pysmsboxnet/issues"
"Documentation" = "https://nardol.github.io/pysmsboxnet/stable"
"SMSBox API 1.1 doc" = "https://en.smsbox.net/docs/doc-API-SMSBOX-1.1-EN.html"
"SMSBox account API doc" = "https://en.smsbox.net/docs/doc-APIFunctions-SMSBOX-FR.html"

[tool.setuptools]
platforms = ["any"]
include-package-data = false

[tool.black]
target-version = ["py39", "py310"]
exclude = 'generated'
extend-exclude = 'src/pysmsboxnet/_version.py'

[tool.isort]
profile = "black"

[tool.setuptools_scm]
version_file = "src/pysmsboxnet/_version.py"
