[build-system]
requires = ["hatchling==1.27.0", "hatch-vcs==0.5.0"]
build-backend = "hatchling.build"

[project]
name = "pysmsboxnet"
dynamic=["version"]
authors = [
    {name = "Patrick ZAJDA", email = "patrick@zajda.fr"}
]
description = "Client to send SMS using www.smsbox.net API"
readme = "README.md"
requires-python = ">=3.11"
keywords = ["smsbox", "api", "sms"]
license = {text = "MIT license"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Framework :: AsyncIO",
    "Framework :: aiohttp",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Communications :: Telephony",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0,<4.0",
]

[dependency-groups]
doc = [
    "Sphinx==8.2.3",
    "furo==2025.7.19",
]
lint = [
    "mypy==1.17.1",
    "pre-commit==4.3.0",
]
test = [
    "aresponses==3.0.0",
    "coverage==7.10.3",
    "pytest==8.4.1",
    "pytest-asyncio==1.1.0",
    "pytest-cov==6.2.1",
]
ci = [
    {include-group = "doc"},
    "hatch-vcs==0.5.0"
]

[project.urls]
"Source code" = "https://github.com/Nardol/pysmsboxnet"
"Bug tracker" = "https://github.com/Nardol/pysmsboxnet/issues"
"Documentation" = "https://nardol.github.io/pysmsboxnet/stable"
"SMSBox API 1.1 doc" = "https://en.smsbox.net/docs/doc-API-SMSBOX-1.1-EN.html"
"SMSBox account API doc" = "https://en.smsbox.net/docs/doc-APIFunctions-SMSBOX-FR.html"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/pysmsboxnet/_version.py"

[tool.hatch.build]
exclude = [
    ".github",
    "codecov.yml",
    "example.py",
    "script",
    ".pre-commit-config.yaml "
]

[tool.uv]
required-version = ">=0.5.19"

[tool.ruff]
extend-exclude = [
    ".venv",
    ".git",
    ".tox",
    "docs",
    "venv",
    "bin",
    "lib",
    "deps",
    "build",
    "src/pysmsboxnet/_version.py",
]

[tool.ruff.lint]
ignore = [
    "D203",
    "D213",
    "E501",
]
extend-select = [
    "A",
    "ASYNC",
    "B",
    "C",
    "C416",
    "C9",
    "D",
    "E",
    "F",
    "I",
    "N",
    "PL",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
    "UP",
    "W",
]
mccabe = {max-complexity = 25}

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
norecursedirs = [
    ".git",
]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
addopts = ["-rxf", "-x", "-v", "-l"]
